# Retrieval-Augmented-Generation

./: .gitignore  QVR.ipynb  RAG.ipynb  README.md  pyproject.toml  rag_1.ipynb  steps.txt
assignment/: rag_1.ipynb  rag_1.ipynb.ipynb  rag_2.ipynb  rag_3.ipynb
chatbot/: ollama_bot.py  openai_bot.py
data/: data.txt
imp/: steps.txt
